fixed styles associated with nav spacing above 1400px

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -17,16 +17,29 @@
 
 .logo {
     width: 14%;
-    margin: 0 0 0 7%;
+    margin: 0 0 0 6%;
 }
 
 .menu-wrap {
-    width: 58%;
+    width: 57%;
 }
 
-.menu {
+.menu-wrap .toggler {
+    display: none;
+}
+
+.menu-wrap .hamburger {
+    display: none;
+}
+
+.menu > div > div > ul {
     display: flex;
     justify-content: space-between;
+    padding: 0;
+}
+
+.menu > div > div > ul > li {
+    list-style: none;
 }
 
 .nav-link {
@@ -35,8 +48,8 @@
 }
 
 .order-button {
-    width: 13%;
-    margin: 0 5% 0 0;
+    width: 12%;
+    margin: 0 7% 0 0;
 }
 
 button {
